--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -108,7 +108,7 @@
                     <div class="col-5">
                     </div>
                 </div>
-                <p-table #dt1 [value]="filteredClients" dataKey="code" editMode="row" selectionMode="single"
+                <!-- <p-table #dt1 [value]="insuredDetails" dataKey="code" editMode="row" selectionMode="single"
                     [(selection)]="selectedInsured" [tableStyle]="{'min-width': '50rem'}" styleClass="p-datatable-sm"
                     responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true">
                     <ng-template pTemplate="header">
@@ -125,18 +125,18 @@
                         </tr>
                     </ng-template>
 
-                    <ng-template pTemplate="body" let-filteredClients let-editing="editing" let-ri="rowIndex">
-                        <tr [pEditableRow]="filteredClients" [pSelectableRow]="filteredClients"
-                            [class.p-highlight]="filteredClients === selectedInsured">
+                    <ng-template pTemplate="body" let-insuredDetails let-editing="editing" let-ri="rowIndex">
+                        <tr [pEditableRow]="insuredDetails" [pSelectableRow]="insuredDetails"
+                            [class.p-highlight]="insuredDetails === selectedInsured">
                             <td>
                                 <p-cellEditor>
                                     <ng-template pTemplate="input">
-                                        <input pInputText type="text" [(ngModel)]="filteredClients.firstName" />
-                                        <input pInputText type="text" [(ngModel)]="filteredClients.lastName" />
+                                        <input pInputText type="text" [(ngModel)]="insuredDetails.newInsured" />
+                                        <input pInputText type="text" [(ngModel)]="insuredDetails.otherNames" />
                                     </ng-template>
                                     <ng-template pTemplate="output">
-                                        {{filteredClients.firstName + ' ' +
-                                        filteredClients.lastName}}
+                                        {{insuredDetails.newInsured + ' ' +
+                                        insuredDetails.otherNames}}
                                     </ng-template>
                                 </p-cellEditor>
                             </td>
@@ -144,71 +144,73 @@
                             <td>
                                 <p-cellEditor>
                                     <ng-template pTemplate="input">
-                                        <input pInputText type="text" [(ngModel)]="filteredClients.physicalAddress"
+                                        <input pInputText type="text" [(ngModel)]="insuredDetails.address"
                                             required />
                                     </ng-template>
                                     <ng-template pTemplate="output">
-                                        {{filteredClients.physicalAddress}}
+                                        {{insuredDetails.address}}
                                     </ng-template>
                                 </p-cellEditor>
                             </td>
                             <td>
                                 <p-cellEditor>
                                     <ng-template pTemplate="input">
-                                        <input pInputText type="text" [(ngModel)]="filteredClients.town" required />
+                                        <input pInputText type="text" [(ngModel)]="insuredDetails.town" required />
                                     </ng-template>
                                     <ng-template pTemplate="output">
-                                        {{filteredClients.town}}
+                                        {{insuredDetails.town}}
                                     </ng-template>
                                 </p-cellEditor>
                             </td>
                             <td>
                                 <p-cellEditor>
                                     <ng-template pTemplate="input">
-                                        <input pInputText type="text" [(ngModel)]="filteredClients.pinNumber" />
+                                        <input pInputText type="text" [(ngModel)]="insuredDetails.pinNo" />
                                     </ng-template>
                                     <ng-template pTemplate="output">
-                                        {{filteredClients.pinNumber}}
+                                        {{insuredDetails.pinNo}}
                                     </ng-template>
                                 </p-cellEditor>
                             </td>
                             <td>
                                 <p-cellEditor>
                                     <ng-template pTemplate="input">
-                                        <input pInputText type="text" [(ngModel)]="filteredClients.passportNumber" />
+                                        <input pInputText type="text" [(ngModel)]="insuredDetails.passportNumber" />
                                     </ng-template>
                                     <ng-template pTemplate="output">
-                                        {{filteredClients.passportNumber}}
+                                        {{insuredDetails.passportNumber}}
                                     </ng-template>
                                 </p-cellEditor>
                             </td>
                             <td>
                                 <p-cellEditor>
                                     <ng-template pTemplate="input">
-                                        <input pInputText type="text" [(ngModel)]="filteredClients.passportNumber" />
+                                        <input pInputText type="text" [(ngModel)]="insuredDetails.passportNumber" />
                                     </ng-template>
                                     <ng-template pTemplate="output">
-                                        {{filteredClients.passportNumber}}
+                                        {{insuredDetails.passportNumber}}
                                     </ng-template>
                                 </p-cellEditor>
                             </td>
                             <td>
                                 <p-cellEditor>
                                     <ng-template pTemplate="input">
-                                        <input pInputText type="text" [(ngModel)]="filteredClients.passportNumber" />
+                                        <input pInputText type="text" [(ngModel)]="insuredDetails.passportNumber" />
                                     </ng-template>
                                     <ng-template pTemplate="output">
-                                        {{filteredClients.passportNumber}}
+                                        {{insuredDetails.passportNumber}}
                                     </ng-template>
                                 </p-cellEditor>
                             </td>
                             <td>
                                 <p-cellEditor>
                                     <ng-template pTemplate="input">
-                                        <input pInputText type="text" [(ngModel)]="filteredClients.idNumber" />
+                                        <input pInputText type="text" [(ngModel)]="insuredDetails.idNo
+                                        " />
                                     </ng-template>
                                     <ng-template pTemplate="output">
-                                        {{filteredClients.idNumber}}
+                                        {{insuredDetails.idNo
+                                        }}
                                     </ng-template>
                                 </p-cellEditor>
                             </td>
@@ -217,7 +219,7 @@
                                     <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
                                         icon="pi pi-pencil" class="p-button-rounded p-button-text"></button>
                                     <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
-                                        icon="pi pi-check" (click)="onInsuredEditSave(filteredClients)"
+                                        icon="pi pi-check" (click)="editInsureds(insuredDetails)"
                                         class="p-button-rounded p-button-text p-button-success mr-2"></button>
                                     <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
                                         icon="pi pi-times"
@@ -226,7 +228,88 @@
                             </td>
                         </tr>
                     </ng-template>
-                </p-table>
+                </p-table> -->
+                <p-table #dt1 [value]="insuredDetails" dataKey="code" editMode="row" selectionMode="single"
+         [(selection)]="selectedInsured" [tableStyle]="{'min-width': '50rem'}" styleClass="p-datatable-sm"
+         responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true">
+    <ng-template pTemplate="header">
+        <tr>
+            <th style="width:50%">Name</th>
+            <th>Address</th>
+            <th>Town</th>
+            <th>Pin</th>
+            <th>Passport no.</th>
+            <th>Business</th>
+            <th style="width:15%">Other interested parties</th>
+            <th>ID no.</th>
+            <th></th>
+        </tr>
+    </ng-template>
+
+    <ng-template pTemplate="body" let-insuredDetails let-editing="editing" let-ri="rowIndex">
+        <tr [pEditableRow]="insuredDetails" [pSelectableRow]="insuredDetails"
+            [class.p-highlight]="insuredDetails === selectedInsured">
+            <td>
+                {{insuredDetails.newInsured + ' ' + insuredDetails.otherNames}}
+            </td>
+            <td>
+                {{insuredDetails.address}}
+            </td>
+            <td>
+                {{insuredDetails.town}}
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="insuredDetails.pinNo" />
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{insuredDetails.pinNo}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="insuredDetails.passportNumber" />
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{insuredDetails.passportNumber}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                {{insuredDetails.business}}
+            </td>
+            <td>
+                {{insuredDetails.otherParties}}
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="insuredDetails.idNo" />
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{insuredDetails.idNo}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <div class="flex align-items-center justify-content-center gap-2">
+                    <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                            icon="pi pi-pencil" class="p-button-rounded p-button-text"></button>
+                    <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                            icon="pi pi-check" (click)="editInsureds(insuredDetails)"
+                            class="p-button-rounded p-button-text p-button-success mr-2"></button>
+                    <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                            icon="pi pi-times"
+                            class="p-button-rounded p-button-text p-button-danger"></button>
+                </div>
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
+
                 <!-- Add Insured  Modal -->
                 <div class="modal fade" id="clientModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
