--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.css
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.css
@@ -1,28 +1,129 @@
+.main {
+  background: #F5F6F8;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.container {
+  background: #FFF;
+  border: 1px solid rgba(220, 220, 220, 0.85);
+  border-radius: 5px;
+  flex: 1;
+  padding: 48px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+button {
+  padding: 8px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  font-size: 14px;
+  transition: background-color 0.3s, color 0.3s, border 0.3s;
+}
+
+button.proceed-btn {
+  background-color: #00529B;
+  color: #FFFFFF;
+  border-color: #00529B;
+}
+
+button.proceed-btn:hover {
+  background-color: #65b2f5;
+}
+
+button.choose-file:hover {
+  transform: translateY(2px);
+}
+
 .title {
-    font-size: 1.25rem;
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.section-title {
+  font-size: 1rem;
+}
+
+.row {
+  padding-top: 10px;
+}
+
+label {
+  color: black;
+  padding-bottom: 8px;
+  white-space: nowrap;
+}
+
+.choose-file {
+  display: inline-flex;
+  height: 24px;
+  padding: 12px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #00529B;
+  background-color: #FFF;
+}
+
+.file-text {
+  color: #00529B;
+  font-family: 'Roboto', sans-serif;
+  padding: 0px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.fixed-width-label {
+  width: 150px;
+  margin-right: 40px;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+@media (max-width: 1000px) {
+  .main {
+    width: 100%;
+    overflow: auto;
+    align-items: center;
   }
-  
-  .section-title {
-    font-size: 1.25rem;
+
+  .container {
+    flex-direction: column;
+    width: 100%;
+    overflow: auto;
   }
-  
-  .quote-label {
-    font-size: 1rem;
+
+  .btns-container {
+    margin-top: 20px;
+    margin-left: unset;
+    width: 100%;
   }
-  
-  .full-border {
-    position: relative;
-  }
-  
-  .choose-file-btn {
-    font-size: 0.7rem;
-  }
-  
+
   .proceed-btn {
-    font-size: 0.7rem;
+    width: 100%;
   }
-  
-  .text-danger {
-    color: red;
+
+  .label {
+    overflow-x: auto;
   }
+
+}
