VQ-2287/Add, update and delete Category API consumption

--- a/src/app/features/lms/grp/components/underwriting/components/endorsement/endorsement.component.html
+++ b/src/app/features/lms/grp/components/underwriting/components/endorsement/endorsement.component.html
@@ -5,6 +5,15 @@
         </div>
       </div>
     <div class="container">
+        <ngx-spinner
+        name="download_view"
+          type="ball-clip-rotate-multiple"
+  
+          [fullScreen]="true"
+          color="#00529B"
+          size="medium"
+          bdColor="rgba(255, 255, 255, 0.9)"
+        ></ngx-spinner>
         <p-confirmDialog></p-confirmDialog>  <!--confirm dialog, used more than once -->
         <div style="padding-left: 25px; padding-top: 20px;"><span class="quote-text">Policy details</span></div>
         <div class="row col-12 mt-1" style="color: black; padding-left: 25px;">
