--- a/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
+++ b/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
@@ -54,10 +54,10 @@
                     <div class=" mb-1 col-sm-4 col-12">
                         <div class="row">
 
-                            <div class="col-6">
+                            <div class="col-4">
                                 <p class="summary-label">Subclass</p>
                             </div>
-                            <div class="col-6" id="value">
+                            <div class="col-8" id="value">
                                 <p-dropdown [options]="allMatchingSubclasses" optionValue="code" optionLabel="description"
                                 formControlName="subClassCode" [placeholder]="'subclass'" [filterBy]="'description'" [filter]="true"></p-dropdown>
                             </div>
@@ -85,12 +85,8 @@
 
                                     <label for="fileInput" class="custom-file-upload mb-4">{{'gis.policy.upload_template' |translate}}</label>
 
-                                    <span *ngIf="uploading === 'progress'" class="mx-3">
-                                      <i class="pi pi-spin pi-spinner" style="color: #cccccc"></i>
-                                    </span>
-                                    <span *ngIf="uploading === 'success'" class="mx-1" style="color: #fff">
-                                      <!--<i class="pi pi-check" ></i>--> File uploaded
-                                    </span>
+                                   
+                                  
                               
                                     <input type="file" id="fileInput" accept=".csv" (change)="onFileSelected($event)">
                             </div>
@@ -144,10 +140,10 @@
                         <td>{{importedRisk.WEF}}</td>
                         <td>{{importedRisk.WET}}</td>
                         <td>{{importedRisk.riskDuplicated}}</td>
-                        <td>{{importedRisk.Class}}</td>
+                        <td>{{importedRisk.class}}</td>
                         <td>{{importedRisk.coverType}}</td>
-                        <td>{{importedRisk.Premium}}</td>
-                        <td>{{importedRisk.Taxes}}</td>
+                        <td>{{importedRisk.premium}}</td>
+                        <td>{{importedRisk.taxes}}</td>
 
                     </tr>
                 </ng-template>
