--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.css
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.css
@@ -131,3 +131,43 @@
     line-height: normal;
     text-align: center;
 }
+#search-input-Rsection{
+    border: none;
+    background-color: transparent;
+    width:200px;
+  }
+  .search-container {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: #F5F6F8;
+  }
+  .search-icon {
+    padding: 10 10px; 
+  }
+  
+  .search-icon i {
+    padding-top :15px;
+    /* font-size: 12px;  */
+    color:#B5B5B5
+  }
+  .scrollable-list{
+    overflow-y: scroll;
+    max-height: 280px;
+  }
+  .form-check-input:checked {
+    background-color:#00529B;
+    border-color: #00529B;
+
+  }
+  .form-check-input {
+    border-color: #868E96
+  }
+  .form-check-input:hover {
+    border-color: #00529B
+  }
+  .section-label{
+    color: #000;
+  }
