--- a/src/app/features/administration/components/tickets/mass-document-dispatch/mass-document-dispatch.component.html
+++ b/src/app/features/administration/components/tickets/mass-document-dispatch/mass-document-dispatch.component.html
@@ -34,7 +34,7 @@
             (input)="filterDocs($event)"
           />
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 my-1">
           <input
             type="date"
             class="form-control"
@@ -42,7 +42,7 @@
         </div>
       </div>
 
-      <div class="col-sm-12 col-md-6 d-flex justify-content-end">
+      <div class="col-sm-12 col-md-6 d-flex justify-content-lg-end">
         <button
           class="btn btn-primary" style="font-size: 12px;" (click)="openDocConfirmModal()">{{'mngt_wrkflw.tickets.dispatchDocuments' | translate }}
 
