VQ-658-VQ-1806:: Country and Message History Modification

--- a/src/app/features/crm/components/messages/messages.component.css
+++ b/src/app/features/crm/components/messages/messages.component.css
@@ -28,6 +28,11 @@
 ::ng-deep .p-tabview .p-tabview-nav {
   border: none;
   border-width: none;
+  font-size: 14px;
+}
+
+::ng-deep .p-datatable.p-datatable-sm .p-datatable-thead > tr > th {
+  font-size: 14px;
 }
 
 .light-bold {
