--- a/src/app/features/crm/components/country/country.component.html
+++ b/src/app/features/crm/components/country/country.component.html
@@ -37,7 +37,7 @@
           <span class="icon-circle"
             ><i class="fa-solid fa-plus" (click)="createCountry()"></i
           ></span>
-          <span class="icon-circle"><i class="pi pi-pencil"></i></span>
+          <!-- <span class="icon-circle"><i class="pi pi-pencil"></i></span> -->
           <span class="icon-circle"
             ><i class="fa-regular fa-trash-can" (click)="deleteCountry()"></i
           ></span>
