VQ-2391: Ability to edit Bank Details on Entity360 View

--- a/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.css
+++ b/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.css
@@ -9,3 +9,12 @@ ul li {
     font-weight: 500;
     line-height: 2;
 }
+
+
+#editModalContent {
+  margin-top: 30vh!important;
+}
+
+.modal-header {
+  border-bottom: none;
+}
