--- a/src/app/features/entities/components/entity/view-entity/view-entity2.component.html
+++ b/src/app/features/entities/components/entity/view-entity/view-entity2.component.html
@@ -26,6 +26,7 @@
                     [wealthAmlDetails]="wealthAmlDetails"
                     (fetchWealthAmlDetails)="getWealthAmlDetails()"
                     (fetchPaymentDetails)="getPaymentDetails()"
+                    (refreshData)="refreshData()"
                   ></app-entity-other-details>
                 </ng-container>
 
