VQ-2397: Ability to edit AML details

--- a/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.html
@@ -275,7 +275,7 @@
         </ng-container>
 
         <ng-container *ngIf="activeTab==='aml'">
-          <app-edit-aml-form></app-edit-aml-form>
+          <app-edit-aml-form (closeEditModal)="closeEditModal()"></app-edit-aml-form>
         </ng-container>
 
         <ng-container *ngIf="activeTab==='nok'">
