--- a/src/app/features/entities/components/entity/view-entity/entity-other-details/edit-aml-form/edit-aml-form.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-other-details/edit-aml-form/edit-aml-form.component.html
@@ -1,3 +1,8 @@
+<ng-container *ngIf="!shouldShowEditForm">
+  <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" [style]="'width:' + progressBarWidth + '%'"></div>
+  </div>
+</ng-container>
 
 <form [formGroup]="amlForm">
   <div class="row g-3">
@@ -42,7 +47,7 @@
   </div>
   <div class="row g-3 mt-1">
     <div class="col-6">
-      <label for="parentCompany" class="form-label">{{ 'entities.parentCompany' | translate }}</label>
+      <label for="parentCompany" class="form-label">{{ 'entities.parent_company' | translate }}</label>
       <select formControlName="parentCompany" id="parentCompany" class="form-select" aria-label="Parent company">
         <option value="">{{ 'entities.source_of_wealth' | translate }}</option>
         <option *ngFor="let source of fundSource" [value]="source.code">
@@ -54,5 +59,5 @@
 </form>
 
 <div class="modal-footer border-0 mt-1">
-  <button type="button" class="btn btn-primary" (click)="updateDetails()">Update details</button>
+  <button type="button" class="btn btn-primary" (click)="updateDetails()">{{ 'entities.update_details' | translate }}</button>
 </div>
