VQ-2396: Updated unit tests

--- a/src/app/features/entities/components/entity/view-entity/entity-other-details/edit-bank-form/edit-bank-form.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-other-details/edit-bank-form/edit-bank-form.component.html
@@ -47,6 +47,6 @@
   </form>
 
   <div class="modal-footer border-0 mt-1">
-    <button type="button" class="btn btn-primary" (click)="updateDetails()">{{ 'entities.update_details' | translate }}</button>
+    <button type="button" class="btn btn-primary" id="update-details" (click)="updateDetails()">{{ 'entities.update_details' | translate }}</button>
   </div>
 </ng-container>
