--- a/src/app/features/entities/components/entity/view-entity/entity-other-details/edit-aml-form/edit-aml-form.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-other-details/edit-aml-form/edit-aml-form.component.html
@@ -59,5 +59,5 @@
 </form>
 
 <div class="modal-footer border-0 mt-1">
-  <button type="button" class="btn btn-primary" (click)="updateDetails()">{{ 'entities.update_details' | translate }}</button>
+  <button type="button" class="btn btn-primary" id="update-details" (click)="updateDetails()">{{ 'entities.update_details' | translate }}</button>
 </div>
